Thêm chức năng chọn chế độ hiển thị bài tập cho từng mssv

--- a/DoAnMon/Views/Schedule/Index.cshtml
+++ b/DoAnMon/Views/Schedule/Index.cshtml
@@ -27,7 +27,7 @@
     }
 </style>
 
-<div class="container-fluid" style="margin-top: 81px; margin-bottom: 10px;">
+<div class="container-fluid" style="margin-top: 81px; margin-bottom: 10px; width: 100%;">
     <div id="calendar"></div>
 </div>
 <script src="https://unpkg.com/popper.js@1"></script>
