Xong thông báo về gmail khi có bài tập mới

--- a/DoAnMon/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/DoAnMon/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -52,6 +52,6 @@
         <partial name="_StatusMessage" model="Model.StatusMessage" />
     </div>
     <p>
-        <a asp-page="./Index" class="login-link">Click here to Login</a>
+        <a asp-page="./Index" class="login-link">Đăng nhập ngay !!!</a>
     </p>
 </div>
